<resources>
    <string name="app_name">Higher Lower Kotlin</string>
    <string name="top_title">Guess if the next throw is going to be lower, equal or higher</string>
    <string name="last_throw">Last Throw: %d</string>
    <string name="btn_lower">LOWER</string>
    <string name="btn_equals">EQUALS</string>
    <string name="btn_higher">HIGHER</string>
    <string name="higher">Higher</string>
    <string name="lower">Lower</string>
    <string name="equals">Equals</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="get_image">dice%d</string>
</resources>