<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/top_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/top_title"
        android:textSize="16dp"
        />

    <ImageView
        android:id="@+id/dice_roll_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_title_tv"
        app:layout_constraintBottom_toBottomOf="@id/last_throw_tv"
        android:src="@drawable/dice1"
        app:layout_constraintVertical_bias="0.800"
        />
    <TextView
        android:id="@+id/last_throw_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_throw"
        app:layout_constraintTop_toBottomOf="@+id/dice_roll_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/equal_btn"
        app:layout_constraintVertical_bias="0.20"
        />
    <Button
        android:id="@+id/lower_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_lower"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/equal_btn"
        />

    <Button
        android:id="@+id/equal_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/lower_btn"
        app:layout_constraintEnd_toStartOf="@id/higher_btn"

        />

    <Button
        android:id="@+id/higher_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_higher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/equal_btn"

        />
</androidx.constraintlayout.widget.ConstraintLayout>